# RayTracer-Rust

./: .gitignore  BVH_IMPLEMENTATION.md  Cargo.toml  GPU_ACCELERATION_INVESTIGATION.md  GPU_ACCELERATION_RESEARCH.md  GPU_README.md  GPU_USAGE.md  IMPLEMENTATION_SUMMARY.md  README.md  devbox.json  gpu_test.scene  test.scene
examples/: gpu_demo.rs
src/: lib.rs  main.rs
src/imgcomparator/: mod.rs
src/raytracer/: gpu_backend.rs  gpu_renderer.rs  mod.rs  ray_tracing.wgsl  raytracer.rs  shader.wgsl
src/raytracer/config/: camera.rs  config_builder.rs  light.rs  mod.rs  shape.rs
src/raytracer/config/shapes/: Sphere.rs  mod.rs  sphere.rs
