[package]
name = "raytracer_rust"
version = "0.1.0"
edition = "2021"

[features]
default = []
gpu = ["wgpu", "bytemuck", "pollster"]

[dependencies]
bvh = "0.12.0"
image = "0.25.9"
nalgebra = "0.34"
rayon = "1.11.0"

# GPU rendering dependencies (optional)
wgpu = { version = "22.1", optional = true }
bytemuck = { version = "1.14", optional = true, features = ["derive"] }
pollster = { version = "0.3", optional = true }
